- Changed the routing system (wouter -> react-router-dom) - Removed deprecated files - Fixed images not showing placeholders or showing alt_text instead

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -365,7 +365,22 @@
       transform: scale(0.5);
       flex-wrap: wrap;
     }
+
+    #right-panel::before {
+        width: 0%!important;
+    }
     
+    .evolution-container-container {
+        padding-left: 5px;
+    }
+    .evolution-container {
+        width: 90%!important;
+        height: 90%!important;
+    }
+    .evolution-screen {
+        width: 80%!important;
+        height: 72%!important;
+    }   
   }
   
   @media only screen and (max-width: 1200px) {
@@ -382,7 +397,6 @@
         transform: scale(0.8);
         flex-wrap: wrap;
       }
-      
   }
 
   /* LEFT PANEL */
@@ -398,8 +412,8 @@
     border-bottom-left-radius: 10px;
     border-top-right-radius: 7px;
   }
+
   /* Top Lights */
-  
   .lights-container {
     position: relative;
     display: flex;
@@ -532,6 +546,7 @@
     justify-self: center;
     position: relative;
     width: 100%;
+    height: 100%;
     max-width: 103px;
     flex: 1;
   }
